hphp/hack/test/package_v2/package_access/crosspackage_attr_nonexistent_pkg.php
//// a.php
<?hh
// package pkg1
class A {
  <<__CrossPackage("pkgNotDefined5")>> // pkgNotDefined doesn't exist
  public function test() : void {
  }
}
